test/compiler_error/_transitive_error.zig
pub fn transitive_error() void {
    @import("std").debug.print("error");
}
